--- a/p8105_hw1_hz2711.md
+++ b/p8105_hw1_hz2711.md
@@ -36,28 +36,28 @@ hw1_df
     ## # A tibble: 10 × 4
     ##       samp vec_logical vec_char    vec_factor
     ##      <dbl> <lgl>       <chr>       <fct>     
-    ##  1 -0.796  FALSE       New York    East Coast
-    ##  2 -0.112  FALSE       Chicago     Midwest   
-    ##  3  0.551  TRUE        Los Angeles West Coast
-    ##  4  0.964  TRUE        New York    East Coast
-    ##  5 -0.0243 FALSE       Chicago     Midwest   
-    ##  6 -0.368  FALSE       Los Angeles West Coast
-    ##  7 -0.492  FALSE       New York    East Coast
-    ##  8 -0.674  FALSE       Chicago     Midwest   
-    ##  9  1.65   TRUE        Los Angeles West Coast
-    ## 10 -0.0235 FALSE       New York    East Coast
+    ##  1  0.226  TRUE        New York    East Coast
+    ##  2 -0.580  FALSE       Chicago     Midwest   
+    ##  3 -0.132  FALSE       Los Angeles West Coast
+    ##  4  0.680  TRUE        New York    East Coast
+    ##  5  0.321  TRUE        Chicago     Midwest   
+    ##  6 -1.12   FALSE       Los Angeles West Coast
+    ##  7  1.62   TRUE        New York    East Coast
+    ##  8 -1.31   FALSE       Chicago     Midwest   
+    ##  9 -0.0665 FALSE       Los Angeles West Coast
+    ## 10 -0.570  FALSE       New York    East Coast
 
 ``` r
 mean(hw1_df$samp)
 ```
 
-    ## [1] 0.06709099
+    ## [1] -0.09266227
 
 ``` r
 mean(hw1_df$vec_logical)
 ```
 
-    ## [1] 0.3
+    ## [1] 0.4
 
 ``` r
 mean(hw1_df$vec_char)
@@ -80,17 +80,53 @@ mean(hw1_df$vec_factor)
 It appears we can take the mean of the random numbers and the logical
 vector but not the character vector or the factor vector.
 
-# Problem 2
-
-Plot
-
 ``` r
-plot_df = tibble(
-  x = rnorm(100),
-  y = 2*x
-)
-
-ggplot(plot_df, aes(x = x, y = y)) + geom_point()
+as.numeric(hw1_df$samp)
+as.numeric(hw1_df$vec_logical)
+as.numeric(hw1_df$vec_char)
+as.numeric(hw1_df$vec_factor)
 ```
 
-![](p8105_hw1_hz2711_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
+The random numbers and logical vector are actually numbers. The
+character vector appears as NA since it is a string, and factor vector
+translates to levels, but not numbers. Therefore, the mean can only be
+taken for the first two.
+
+# Problem 2
+
+## Palmer Penguins
+
+``` r
+data("penguins", package = "palmerpenguins")
+
+rows = nrow(penguins)
+cols = ncol(penguins)
+total = rows*cols
+
+penguin_variables = names(penguins)
+
+mean_flipper = penguins %>% drop_na() %>% summarise(mean(flipper_length_mm)) %>% round(digits = 2)
+```
+
+There are **344** rows and **8** columns in this data set for a total of
+**2752** values.
+
+The variables in this data set are **species, island, bill\_length\_mm,
+bill\_depth\_mm, flipper\_length\_mm, body\_mass\_g, sex, year**
+
+The mean flipper length is **200.97** mm.
+
+``` r
+scatter = penguins %>% drop_na() %>% 
+ggplot((aes(bill_length_mm, flipper_length_mm, color = species))) + geom_point()
+
+ggsave("hw1_scatterplot.pdf", plot = scatter)
+```
+
+    ## Saving 7 x 5 in image
+
+``` r
+scatter
+```
+
+![](p8105_hw1_hz2711_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
